feat(price-history-and-get): add price history functionality
