# src/main/resources/openapi/openapi.yml
@@ -190,6 +190,36 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/ProductResponse'
+  /stock/{productId}/price-history:
+    get:
+      tags:
+        - Products
+      summary: Get Product Price history
+      operationId: productPriceHistory
+      description: Returns the price history for a specific product.
+      parameters:
+        - name: productId
+          in: path
+          required: true
+          description: Product ID
+          schema:
+            type: string
+            example: "12345"
+      responses:
+        '200':
+          description: Price history
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProductPriceHistoryItem'
+        '404':
+          description: Product not found or no history
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
     ProductRequest:
@@ -249,3 +279,32 @@ components:
         detail:
           description: "A description of the error"
           type: string
+    ProductPriceHistoryItem:
+      type: object
+      properties:
+        productId:
+          type: string
+          description: Product ID
+          example: "12345"
+        originalPrice:
+          type: number
+          format: double
+          description: Original Price
+          example: 1099.99
+        newPrice:
+          type: number
+          format: double
+          description: New Price After Convert
+          example: 13.99
+        originalCurrency:
+          type: string
+          description: Original Product Currency
+          example: "DOP"
+        newCurrency:
+          type: string
+          description: New Product Currency After Convert
+          example: "DOP"
+        changeDate:
+          type: string
+          description: Date and time of the movement
+          example: "2025-05-01T03:34:59"
